[package]
name = "Back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-rustls"] }
dotenv = "0.15"
prettytable = "0.10"
bcrypt = "0.12" 
lettre = "0.11"
rand = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.0"