[package]
name = "Back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
bcrypt = "0.12"
lettre = "0.10.0-rc.4"
rand = "0.8"
uuid = { version = "1.2", features = ["v4"] }
jsonwebtoken = "8"
chrono = "0.4"
actix-cors="0.7.0"